food tech app created

--- a/basic/index.html
+++ b/basic/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn HTML</title>
+    <link rel="stylesheet" href="./css/common.css">
+    <title>Learn React</title>
 </head>
 <body>
     <div id="root">
         <h3>Hellow World</h3>
     </div>
+
+    <!--script type="module" src="./index.js"></!--script-->
+    <script type="module" src="./js/functional-component.js"></script>
 </body>
 </html>
